<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ph.com.medilink.maxiflexmobileapp.Fragments.MedicalRecord.Fragment_PatientProfile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/vital_padding"
        android:orientation="vertical"
        android:paddingStart="@dimen/fragment_padding"
        android:paddingEnd="@dimen/fragment_padding">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/patient_name"
            android:textSize="@dimen/label_textsize"
            android:textColor="@color/textColorSecondary"/>

        <TextView
            android:id="@+id/tvPatientName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_emr"
            android:textSize="@dimen/main_textsize"
            android:padding="@dimen/main_textpadding"
            android:layout_marginBottom="@dimen/main_text_marginbottom"
            android:textColor="@color/textColorPrimary"
            android:ellipsize="marquee"
            android:singleLine="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_birthdate"
            android:textSize="@dimen/label_textsize"
            android:textColor="@color/textColorSecondary"/>

        <TextView
            android:id="@+id/tvBirthdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_emr"
            android:textSize="@dimen/main_textsize"
            android:padding="@dimen/main_textpadding"
            android:layout_marginBottom="@dimen/main_text_marginbottom"
            android:textColor="@color/textColorPrimary"
            android:ellipsize="marquee"
            android:singleLine="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_sex"
            android:textSize="@dimen/label_textsize"
            android:textColor="@color/textColorSecondary"/>

        <TextView
            android:id="@+id/tvSex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_emr"
            android:textSize="@dimen/main_textsize"
            android:padding="@dimen/main_textpadding"
            android:layout_marginBottom="@dimen/main_text_marginbottom"
            android:textColor="@color/textColorPrimary"
            android:ellipsize="marquee"
            android:singleLine="true"/>
    </LinearLayout>



</LinearLayout>
