<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/vital_padding">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/vital_paddingTopEndStart"
                    android:paddingStart="@dimen/fragment_padding"
                    android:paddingEnd="@dimen/fragment_padding">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_menstrual"
                        android:textColor="@color/textColorSecondary"
                        android:textSize="@dimen/label_textsize" />

                    <TextView
                        android:id="@+id/tvMenstrual"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/main_text_marginbottom"
                        android:background="@drawable/edittext_emr"
                        android:padding="@dimen/main_textpadding"
                        android:textColor="@color/textColorPrimary"
                        android:textSize="@dimen/main_textsize" />
                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/fragment_padding"
                    android:paddingEnd="@dimen/fragment_padding">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_obstetrical"
                        android:textColor="@color/textColorSecondary"
                        android:textSize="@dimen/label_textsize" />

                    <TextView
                        android:id="@+id/tvObstetrical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/main_text_marginbottom"
                        android:background="@drawable/edittext_emr"
                        android:padding="@dimen/main_textpadding"
                        android:textColor="@color/textColorPrimary"
                        android:textSize="@dimen/main_textsize" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/fragment_padding"
                    android:paddingEnd="@dimen/fragment_padding">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_gynecological"
                        android:textColor="@color/textColorSecondary"
                        android:textSize="@dimen/label_textsize" />

                    <TextView
                        android:id="@+id/tvGynecological"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/main_text_marginbottom"
                        android:background="@drawable/edittext_emr"
                        android:padding="@dimen/main_textpadding"
                        android:textColor="@color/textColorPrimary"
                        android:textSize="@dimen/main_textsize" />
                </LinearLayout>


            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>